[metadata]
name = bankers
author = huwns
author-email = huwns@gmail.com
summary = A library to analyze Bankers
license = GPLv3+
description-file = README.rst
home-page = http://pypi.python.org/pypi/bankers
requires-python = >=3.6
classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    bankers
