[metadata]
name = bankers
version = attr: bankers.__version__
author = huwns
url = https://github.com/huwns/bankers
author_email = huwns@gmail.com
description = A library to analyze the board game Bankers
long_description = file: README.rst
license = BSD-3-Clause
requires-python = >=3.6
classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
install_requires = matplotlib
