[metadata]
name = pybankers
version = attr: pybankers.__version__
author = huwns
url = https://pybankers.readthedocs.io
author_email = huwnss2@gmail.com
description = A library to analyze the board game Bankers
long_description = file: README.rst
license = BSD-3-Clause
requires-python = >=3.6
classifier = 
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
keywords = bankers, board game, analyze, analysis
project_urls =
    Source=https://github.com/huwns/pybankers
    Tracker=https://github.com/huwns/pybankers/issues


[options]
packages = find:
install_requires = matplotlib

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    pybankers = pybankers.__main__:main
